--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "third_party/glfw"]
 	path = third_party/glfw
 	url = git@github.com:glfw/glfw.git
+[submodule "DiligentCore"]
+	path = DiligentCore
+	url = git@github.com:DiligentGraphics/DiligentCore.git
