--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -53,24 +53,32 @@ endif()
 if (METAL_SUPPORTED)
   set(Diligent_LIBS ${Diligent_LIBS} Diligent-GraphicsEngineMetal-static)
 endif()
+set(Diligent_LIBS ${Diligent_LIBS} Diligent-GraphicsTools Diligent-TargetPlatform)
 
 include_directories(${UNIENGINE_DEPEND_DIR}/glfw/include)
 include_directories(${UNIENGINE_DEPEND_DIR}/NanoLog)
 include_directories(${UNIENGINE_EXTERN_DIR}/)
+include_directories(${UNIENGINE_DEPEND_DIR}/DiligentCore/Graphics/GraphicsTools/interface)
 
 #source code
 file(GLOB EXTERN_SOURCES_APP ${UNIENGINE_ROOT_DIR}/externs/app/*.cpp)
 file(GLOB DEPEND_LOG_SOURCES ${UNIENGINE_DEPEND_DIR}/NanoLog/*.cpp)
-set(SOURCES ${EXTERN_SOURCES_APP} ${DEPEND_LOG_SOURCES} main.cpp)
+set(UNI_SOURCES ${EXTERN_SOURCES_APP} ${DEPEND_LOG_SOURCES} main.cpp)
 message("sources: ${SOURCES}")
 
 #targets
-#helleo_triangle 
-set(UNI_TARGET_TRIANGLE hello_triangle)
-file(GLOB SOURCES_TRIANGLE_SAMPLE ${UNIENGINE_ROOT_DIR}/externs/samples/triangle/*.cpp)
-set(SOURCES ${SOURCES} ${SOURCES_TRIANGLE_SAMPLE})
-add_executable(${UNI_TARGET_TRIANGLE} ${SOURCES})
-target_compile_options(${UNI_TARGET_TRIANGLE} PRIVATE ${UNI_COMPILE_OPTIONS})
-target_include_directories(${UNI_TARGET_TRIANGLE} PRIVATE ${UNIENGINE_DEPEND_DIR}/glfw/include 
-  ${UNIENGINE_DEPEND_DIR}/DiligentCore)
-target_link_libraries(${UNI_TARGET_TRIANGLE} glfw ${Diligent_LIBS})
+#sample_triangle 
+set(UNI_TARGET sample_triangle)
+file(GLOB SOURCES_SAMPLE_TRIANGLE ${UNIENGINE_ROOT_DIR}/externs/samples/triangle/*.cpp)
+set(SOURCES ${UNI_SOURCES} ${SOURCES_SAMPLE_TRIANGLE})
+add_executable(${UNI_TARGET} ${SOURCES})
+target_compile_options(${UNI_TARGET} PRIVATE ${UNI_COMPILE_OPTIONS})
+target_link_libraries(${UNI_TARGET} glfw ${Diligent_LIBS})
+
+#sample_buffers
+set(UNI_TARGET sample_buffers)
+file(GLOB SOURCES_SAMPLE_BUFFERS ${UNIENGINE_ROOT_DIR}/externs/samples/buffers/*.cpp)
+set(SOURCES ${UNI_SOURCES} ${SOURCES_SAMPLE_BUFFERS})
+add_executable(${UNI_TARGET} ${SOURCES})
+target_compile_options(${UNI_TARGET} PRIVATE ${UNI_COMPILE_OPTIONS})
+target_link_libraries(${UNI_TARGET} glfw ${Diligent_LIBS})
